[project]
name = "racegame"
version = "0.1.0"
description = "Emerson's racing game"
readme = "README.md"
requires-python = ">=3.13.7"
dependencies = [
    "pytest>=8.4.2",
    "pytest-bdd>=8.1.0",
    "pytest-playwright>=0.7.1",
    "python-fasthtml>=0.12.27",
]

[tool.pytest.ini_options]
pythonpath = ["."]
